--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@angular/animations": "11.1.2",
+    "@ng-select/ng-select": "6.1.0",
     "apexcharts": "3.24.0",
     "bcrypt": "5.0.0",
     "bootstrap": "4.6.0",
