--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
   },
   "dependencies": {
     "@angular/animations": "11.1.2",
+    "@fortawesome/angular-fontawesome": "0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-select/ng-select": "6.1.0",
     "apexcharts": "3.24.0",
     "bcrypt": "5.0.0",
